Added logos to different pages and the nav bar.

--- a/BlazorApp/Components/Layout/HeaderLayout.razor
+++ b/BlazorApp/Components/Layout/HeaderLayout.razor
@@ -4,7 +4,7 @@
     <main>
         <div class="top-row px-4">
             <NavLink href="Home" style="color: white;">Back to Home</NavLink>
-            <h1 class="title">Mat Matchmaker</h1>
+            <h1 class="title"><img src="favicon.png" width="60" height="45" style="padding-right: 10px;">Mat Matchmaker</h1>
             <Dropdown>
                 <DropdownToggleButton Color="ButtonColor.Primary">
                     <Icon Name="IconName.PersonCircle" style="margin-right: 5px;" />Profile
