--- a/BlazorApp/Components/Layout/LandingLayout.razor
+++ b/BlazorApp/Components/Layout/LandingLayout.razor
@@ -3,7 +3,7 @@
 <div class="page">
     <main>
         <div class="top-row px-4">
-            <h2 style="padding-left:1.5rem;">Mat Matchmaker</h2>
+            <h2 style="padding-left:1.5rem;"><img src="favicon.png" width="60" height="45" style="padding-right: 10px;">Mat Matchmaker</h2>
             <NavLink href="#" style="color: white;">About</NavLink>
             <NavLink href="#" style="color: white; padding-right:1.5rem;">Contact Us</NavLink>
         </div>
