--- a/BlazorApp/Components/Pages/Landing.razor
+++ b/BlazorApp/Components/Pages/Landing.razor
@@ -20,6 +20,9 @@
                 </div>
             </div>
         </div>
+        <div style="padding-top: 75px;">
+        <img src="Logo.png" width="600" height="400">
+        </div>
         <div class="container__right">
             <form>
                 <h4>Ready to get started?</h4>
@@ -29,12 +32,11 @@
                         type="text"
                         name="email"
                         id="email"
-                        placeholder="Enter your email"
-                    />
+                        placeholder="Enter your email"/>
                 </div>
                 <div class="form__group">
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password" placeholder="Enter your password" />
+                    <input type="password" name="password" id="password" placeholder="Enter your password"/>
                 </div>
                 <button type="submit">Login</button>
                 <p>Don't have an account? <a href="@("/SignUp")">Click here</a> to sign up.</p>
