--- a/BlazorApp/Components/Pages/SignUp.razor
+++ b/BlazorApp/Components/Pages/SignUp.razor
@@ -13,6 +13,9 @@
 <head>
 
 </head>
+<div style="text-align: center;">
+    <img src="Logo.png" width="300" height="200" style="display: inline-block;">
+</div>
 <h1 class="center-title">Sign Up</h1>
 
 <body class="SignUp-body">
