--- a/BlazorApp/Components/Pages/Login.razor
+++ b/BlazorApp/Components/Pages/Login.razor
@@ -26,11 +26,12 @@
 
         .center {
             text-align: center;
+            padding-top: 20px;
         }
 
         .container {
             width: 300px;
-            margin: 100px auto;
+            margin: 25px auto;
             background-color: #fff;
             padding: 20px;
             border-radius: 5px;
@@ -39,6 +40,7 @@
 
         h2 {
             text-align: center;
+            font-size: 24px;
         }
 
         
@@ -58,6 +60,10 @@
             }
     </style>
 <body>
+<div style="text-align: center;">
+    <img src="Logo.png" width="300" height="200" style="display: inline-block;">
+</div>
+
 <div class="center">
     <h2>Welcome to MatMatchmaker! <br/>Please login or create an account!</h2>
 </div>
@@ -69,7 +75,7 @@
         <br><br/>
         <button type="submit" class="btn btn-primary">Login</button>
         <p><a href="/SignUp">Create an account</a></p>
-        
+
     </form>
 
 
